--- a/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
+++ b/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
@@ -6,32 +6,32 @@
     tools:context=".DenunciaFoto">
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/Header"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/header_main"
-        android:scaleType="fitCenter"
+        android:contentDescription="@string/todo"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/header_main"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/header_main" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/Footer"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
         android:background="@drawable/footer_main"
         android:contentDescription="@string/todo"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/adView_MandarDenuncia"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toTopOf="@id/adView_MandarDenuncia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/footer_main" />
@@ -49,43 +49,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+    <Button
+        android:id="@+id/btnCancelar"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:background="@drawable/btn_rosa"
+        android:onClick="btnCancelar"
+        android:text="@string/cancelar"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/Footer"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/btnCancelarEnvio"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_rosa"
-            android:onClick="btnCancelar"
-            android:text="@string/cancelar"
-            android:textSize="12sp" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" />
-
-        <Button
-            android:id="@+id/btnMandarTweet"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_verde"
-            android:onClick="shareTweet"
-            android:text="@string/enviar_por_tweeter"
-            android:textSize="12sp" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnMandarTweet"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:background="@drawable/btn_verde"
+        android:onClick="MandarTweet"
+        android:text="@string/enviar_por_tweeter"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/Footer"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/FotoDenunciaFinal"
@@ -108,16 +98,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/tu_denuncia"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/FotoDenuncia"
+        app:layout_constraintBottom_toTopOf="@+id/FotoDenunciaFinal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@id/Header" />
 
     <TextView
         android:id="@+id/TextoDenunciaFinal"
@@ -125,11 +116,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="TextView"
+        android:text="@string/textview"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnMandarTweet"
+        tools:layout_editor_absoluteY="562dp" />
 
 </android.support.constraint.ConstraintLayout>
