--- a/app/src/main/res/layout/activity_feed_redes.xml
+++ b/app/src/main/res/layout/activity_feed_redes.xml
@@ -26,11 +26,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/header_main"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/header_main"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -39,11 +39,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/footer_main"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toTopOf="@+id/adView_Feed"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/footer_main"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <WebView
         android:id="@+id/feed"
