--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,9 +3,9 @@
 
     <item
         android:id="@+id/about"
-        android:title="Acerca de Nosotros" />
+        android:title="Acerca de esta App" />
     <item
         android:id="@+id/compartir"
-        android:title="Recomenda nuestra App" />
+        android:title="Recomendanos" />
 
 </menu>
