--- a/app/src/main/res/values/codigos_ads.xml
+++ b/app/src/main/res/values/codigos_ads.xml
@@ -6,5 +6,6 @@
     <string name="ad_DenunciaFoto">ca-app-pub-2600751459304159/1433658259</string>
     <string name="ad_MandarDenunciaFoto">ca-app-pub-2600751459304159/6762716993</string>
     <string name="ad_DenunciaTexto">ca-app-pub-2600751459304159/5183887928</string>
-    <string name="ad_FeedRedes">ca-app-pub-2600751459304159/8931561247</string>
+    <string name="ad_ListaPrecios">ca-app-pub-2600751459304159/8931561247</string>
+
 </resources>
