--- a/app/src/main/res/layout/activity_feed_redes.xml
+++ b/app/src/main/res/layout/activity_feed_redes.xml
@@ -14,7 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/ad_FeedRedes"
+        ads:adUnitId="@string/ad_ListaPrecios"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
