--- a/app/src/main/res/layout/activity_listado_precios.xml
+++ b/app/src/main/res/layout/activity_listado_precios.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/header_main" />
 
     <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+        android:id="@+id/adViewListado"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         ads:adSize="SMART_BANNER"
@@ -36,7 +36,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/adView"
+        app:layout_constraintBottom_toTopOf="@+id/adViewListado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/footer_main" />
