--- a/app/src/main/res/layout/activity_denuncia_texto.xml
+++ b/app/src/main/res/layout/activity_denuncia_texto.xml
@@ -233,7 +233,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:gravity="bottom"
+                android:gravity="center"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/adView_DenunciaTexto"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -242,27 +242,38 @@
                 <Button
                     android:id="@+id/btnCancelar"
                     android:layout_width="100dp"
-                    android:layout_height="40dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:background="@drawable/btn_rosa"
                     android:onClick="btnCancelarTweet"
                     android:text="@string/cancelar"
-                    android:textSize="12sp" />
+                    android:textSize="8sp" />
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2" />
+                <Button
+                    android:id="@+id/btnMandarMail"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_azul"
+                    android:onClick="MandarMail"
+                    android:text="Mail a Defensa Consumidor"
+                    android:textSize="8sp" />
 
                 <Button
                     android:id="@+id/btnMandarTweet"
                     android:layout_width="100dp"
-                    android:layout_height="40dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:background="@drawable/btn_verde"
                     android:onClick="btnMandarTweet"
-                    android:text="@string/listo"
-                    android:textSize="12sp" />
+                    android:text="Mandar Twitter"
+                    android:textSize="8sp" />
             </LinearLayout>
 
         </LinearLayout>
