--- a/app/src/main/res/layout/activity_denuncia_foto.xml
+++ b/app/src/main/res/layout/activity_denuncia_foto.xml
@@ -50,19 +50,46 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/btnCancelar"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:background="@drawable/btn_rosa"
+        android:onClick="btnCancelar"
+        android:text="@string/cancelar"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/Footer"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnMandarTweet"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:background="@drawable/btn_verde"
+        android:onClick="btnOK"
+        android:text="@string/listo"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/Footer"
+        app:layout_constraintEnd_toEndOf="@+id/DenunciaContainer" />
+
     <android.support.v7.widget.CardView
         android:id="@+id/DenunciaContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        app:cardElevation="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="8dp"
         android:onClick="btnDenuncia"
-        >
+        app:cardElevation="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnMandarTweet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -116,44 +143,6 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/Footer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/btnCancelar"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_rosa"
-            android:onClick="btnCancelar"
-            android:text="@string/cancelar"
-            android:textSize="12sp" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" />
-
-        <Button
-            android:id="@+id/btnMandarTweet"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_verde"
-            android:onClick="btnOK"
-            android:text="@string/listo"
-            android:textSize="12sp" />
-    </LinearLayout>
 
     <ImageView
         android:id="@+id/FotoDenuncia"
