--- a/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
+++ b/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
@@ -8,17 +8,16 @@
     <ImageView
         android:id="@+id/Header"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/header_main"
         android:contentDescription="@string/todo"
-        android:scaleType="centerInside"
+        android:scaleType="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/header_main" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/Footer"
@@ -51,29 +50,45 @@
 
     <Button
         android:id="@+id/btnCancelar"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:background="@drawable/btn_rosa"
         android:onClick="btnCancelar"
         android:text="@string/cancelar"
-        android:textSize="12sp"
+        android:textSize="8sp"
         app:layout_constraintBottom_toTopOf="@id/Footer"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/btnMandarMail"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:background="@drawable/btn_azul"
+        android:onClick="MandarMail"
+        android:text="Mail a Defensa Consumidor"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@id/Footer"
+        app:layout_constraintEnd_toStartOf="@+id/btnMandarTweet"
+        app:layout_constraintStart_toEndOf="@+id/btnCancelar" />
+
+    <Button
         android:id="@+id/btnMandarTweet"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:background="@drawable/btn_verde"
         android:onClick="MandarTweet"
         android:text="@string/enviar_por_tweeter"
-        android:textSize="12sp"
+        android:textSize="8sp"
         app:layout_constraintBottom_toTopOf="@id/Footer"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -90,25 +105,8 @@
         app:layout_constraintBottom_toTopOf="@+id/TextoDenunciaFinal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TuDenuncia"
+        app:layout_constraintTop_toBottomOf="@+id/Header"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/TuDenuncia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/tu_denuncia"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/FotoDenunciaFinal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Header" />
 
     <TextView
         android:id="@+id/TextoDenunciaFinal"
@@ -116,11 +114,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/textview"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/btnMandarTweet"
-        tools:layout_editor_absoluteY="562dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
