--- a/app/src/main/res/layout/dialog_set_region.xml
+++ b/app/src/main/res/layout/dialog_set_region.xml
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitSetRegion">
 
@@ -64,6 +66,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btn_verde"
         android:elevation="@dimen/cardview_default_elevation"
         android:text="Listo"
