--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,9 +15,11 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/splash_screen"
+        android:src="@drawable/splash2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/splash2" />
+
 </android.support.constraint.ConstraintLayout>
