--- a/app/src/main/res/layout/activity_denuncia_texto.xml
+++ b/app/src/main/res/layout/activity_denuncia_texto.xml
@@ -276,20 +276,24 @@
                     android:textSize="8sp" />
             </LinearLayout>
 
+            <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/footer2"
+                android:contentDescription="@string/todo" />
+
         </LinearLayout>
     </ScrollView>
 
-
-
     <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView_DenunciaTexto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/ad_main"
+        android:layout_centerHorizontal="true"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="@string/ad_main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
