--- a/app/src/main/res/layout/activity_listado_precios.xml
+++ b/app/src/main/res/layout/activity_listado_precios.xml
@@ -39,7 +39,7 @@
         app:layout_constraintBottom_toTopOf="@+id/adViewListado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/footer_main" />
+        app:srcCompat="@drawable/footer2" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView4"
