--- a/app/src/main/res/layout/activity_denuncia_foto.xml
+++ b/app/src/main/res/layout/activity_denuncia_foto.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/header_main" />
+        android:src="@drawable/header_main" />
 
     <ImageView
         android:id="@+id/Footer"
@@ -33,7 +33,7 @@
         app:layout_constraintBottom_toTopOf="@+id/adView_Denuncia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/footer2" />
+        android:src="@drawable/footer2" />
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
