--- a/app/src/main/res/layout/activity_listado_precios.xml
+++ b/app/src/main/res/layout/activity_listado_precios.xml
@@ -12,12 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:src="@drawable/header_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/header_main" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adViewListado"
@@ -39,7 +39,7 @@
         app:layout_constraintBottom_toTopOf="@+id/adViewListado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/footer2" />
+        android:src="@drawable/footer2" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView4"
@@ -64,8 +64,10 @@
                 android:layout_height="40dp"
                 android:adjustViewBounds="false"
                 android:contentDescription="Buscar"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/search" />
+                android:src="@drawable/search" />
 
             <EditText
                 android:id="@+id/SearchBar"
