--- a/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
+++ b/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
@@ -8,13 +8,13 @@
     <ImageView
         android:id="@+id/Header"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/header_main"
         android:contentDescription="@string/todo"
-        android:scaleType="center"
+        android:scaleType="fitCenter"
+        android:src="@drawable/header_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toTopOf="@id/adView_MandarDenuncia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/footer2" />
+        android:src="@drawable/footer2" />
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
