--- a/app/src/main/res/layout/activity_lector_codigo_de_barras.xml
+++ b/app/src/main/res/layout/activity_lector_codigo_de_barras.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".LectorCodigoDeBarras">
 
+    <FrameLayout
+        android:id="@+id/fm_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </android.support.constraint.ConstraintLayout>
