--- a/app/src/main/res/layout/activity_lector_codigo_de_barras.xml
+++ b/app/src/main/res/layout/activity_lector_codigo_de_barras.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".LectorCodigoDeBarras">
 
+    <SurfaceView
+        android:id="@+id/camera_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/Camara" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/Camara"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textoCodigo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
