Lista Version 2.5 Cambios Gráficos - Proximos Pasos Borrar Archivos no utilizados. Funciona Barcode, AHORA HACER UI Y FILTER

--- a/app/src/main/res/layout/activity_listado_precios.xml
+++ b/app/src/main/res/layout/activity_listado_precios.xml
@@ -23,7 +23,7 @@
         android:id="@+id/adViewListado"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        ads:adSize="SMART_BANNER"
+        ads:adSize="BANNER"
         ads:adUnitId="@string/ad_ListaPrecios"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
