--- a/app/src/main/res/layout/activity_denuncia_texto.xml
+++ b/app/src/main/res/layout/activity_denuncia_texto.xml
@@ -292,7 +292,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        app:adSize="SMART_BANNER"
+        app:adSize="BANNER"
         app:adUnitId="@string/ad_main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
